[gd_scene load_steps=64 format=2]

[ext_resource path="res://art/bounty_hunter/run/bounty_hunter_run_6.png" type="Texture" id=1]
[ext_resource path="res://art/bounty_hunter/run/bounty_hunter_run_5.png" type="Texture" id=2]
[ext_resource path="res://art/bounty_hunter/run/bounty_hunter_run_4.png" type="Texture" id=3]
[ext_resource path="res://art/bounty_hunter/idle/bounty_hunter_2.png" type="Texture" id=4]
[ext_resource path="res://art/bounty_hunter/abilities/selection_frame.png" type="Texture" id=5]
[ext_resource path="res://art/bounty_hunter/run/bounty_hunter_run_1.png" type="Texture" id=6]
[ext_resource path="res://art/bounty_hunter/abilities/sel_frag.png" type="Texture" id=7]
[ext_resource path="res://scenes/weapon.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/bounty_hunter.gd" type="Script" id=9]
[ext_resource path="res://art/bounty_hunter/hook/hook.png" type="Texture" id=10]
[ext_resource path="res://art/bounty_hunter/run/bounty_hunter_run_2.png" type="Texture" id=11]
[ext_resource path="res://art/bounty_hunter/reel/reel_1.png" type="Texture" id=12]
[ext_resource path="res://art/bounty_hunter/reel/reel_6.png" type="Texture" id=13]
[ext_resource path="res://art/bounty_hunter/abilities/sel_flash.png" type="Texture" id=14]
[ext_resource path="res://art/bounty_hunter/abilities/sel_smoke.png" type="Texture" id=15]
[ext_resource path="res://art/bounty_hunter/reel/reel_2.png" type="Texture" id=16]
[ext_resource path="res://art/bounty_hunter/reel/reel_3.png" type="Texture" id=17]
[ext_resource path="res://art/bounty_hunter/reel/reel_4.png" type="Texture" id=18]
[ext_resource path="res://art/bounty_hunter/reel/reel_5.png" type="Texture" id=19]
[ext_resource path="res://art/bounty_hunter/reel/reel_7.png" type="Texture" id=20]
[ext_resource path="res://art/enemies/timer.png" type="Texture" id=21]
[ext_resource path="res://art/bounty_hunter/run/bounty_hunter_run_3.png" type="Texture" id=22]
[ext_resource path="res://art/bounty_hunter/idle/bounty_hunter_3.png" type="Texture" id=23]
[ext_resource path="res://art/enemies/timer_full.png" type="Texture" id=24]
[ext_resource path="res://art/bounty_hunter/death/4.png" type="Texture" id=25]
[ext_resource path="res://art/bounty_hunter/death/1.png" type="Texture" id=26]
[ext_resource path="res://art/bounty_hunter/death/3.png" type="Texture" id=27]
[ext_resource path="res://art/bounty_hunter/death/7.png" type="Texture" id=28]
[ext_resource path="res://art/bounty_hunter/death/8.png" type="Texture" id=29]
[ext_resource path="res://art/bounty_hunter/death/9.png" type="Texture" id=30]
[ext_resource path="res://art/bounty_hunter/death/12.png" type="Texture" id=31]
[ext_resource path="res://art/bounty_hunter/death/10.png" type="Texture" id=32]
[ext_resource path="res://art/bounty_hunter/idle/bounty_hunter_1.png" type="Texture" id=33]
[ext_resource path="res://art/bounty_hunter/death/11.png" type="Texture" id=34]
[ext_resource path="res://art/bounty_hunter/death/6.png" type="Texture" id=35]
[ext_resource path="res://art/bounty_hunter/death/5.png" type="Texture" id=36]
[ext_resource path="res://art/bounty_hunter/death/2.png" type="Texture" id=37]
[ext_resource path="res://art/bounty_hunter/death/13.png" type="Texture" id=38]
[ext_resource path="res://art/bounty_hunter/death/16.png" type="Texture" id=39]
[ext_resource path="res://fonts/novem___.ttf" type="DynamicFontData" id=40]
[ext_resource path="res://art/bounty_hunter/death/14.png" type="Texture" id=41]
[ext_resource path="res://art/bounty_hunter/death/15.png" type="Texture" id=42]
[ext_resource path="res://art/bounty_hunter/shoot/bounty_hunter_shoot3.png" type="Texture" id=43]
[ext_resource path="res://art/bounty_hunter/shoot/bounty_hunter_shoot2.png" type="Texture" id=44]
[ext_resource path="res://art/bounty_hunter/shoot/bounty_hunter_shoot1.png" type="Texture" id=45]
[ext_resource path="res://art/particles/smoke.png" type="Texture" id=46]
[ext_resource path="res://scripts/hook.gd" type="Script" id=47]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 45 ), ExtResource( 44 ), ExtResource( 43 ) ],
"loop": true,
"name": "start",
"speed": 10.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 4 ), ExtResource( 23 ), ExtResource( 23 ), ExtResource( 4 ), ExtResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 43 ) ],
"loop": true,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 37 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 38 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 39 ) ],
"loop": false,
"name": "death",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.482955, 1 )
colors = PoolColorArray( 1, 0.5625, 0, 1, 0.98402, 0.322882, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 90.0
gravity = Vector3( 0, 200, 0 )
initial_velocity = 70.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color_ramp = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 40 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.144531, 0.0547638, 0.0547638, 1, 0.145098, 0.054902, 0.054902, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0.00502513, 0.381818 ), 0.0, 0.0, 0, 0, Vector2( 0.984925, 0.690909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 6, 1, 0 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("selection_panel/HBoxContainer/grenade2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("selection_panel/HBoxContainer/grenade3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("selection_panel:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("selection_panel/HBoxContainer/grenade1:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1.2, 1.2 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("selection_panel:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18.5223, -51.8394 ), Vector2( -18.684, -54.913 ), Vector2( -18.684, -54.9129 ), Vector2( -3.15443, -8.57893 ) ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("selection_panel/HBoxContainer/grenade1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("selection_panel/HBoxContainer/grenade3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("selection_panel:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("selection_panel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18.5223, -51.8394 ), Vector2( -18.684, -53.913 ), Vector2( -18.684, -53.913 ), Vector2( -18.684, -3.253 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("selection_panel/HBoxContainer/grenade2:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1.2, 1.2 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("selection_panel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("selection_panel/HBoxContainer/grenade1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("selection_panel/HBoxContainer/grenade2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("selection_panel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18.5223, -51.8394 ), Vector2( -18.522, -54.046 ), Vector2( -18.522, -54.046 ), Vector2( -32.6604, -4.25424 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("selection_panel/HBoxContainer/grenade3:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1.2, 1.2 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("selection_panel/HBoxContainer/grenade1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("selection_panel/HBoxContainer/grenade2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("selection_panel/HBoxContainer/grenade3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("selection_panel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("selection_panel:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -18.5223, -51.8394 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("selection_panel/HBoxContainer/grenade1:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("selection_panel/HBoxContainer/grenade2:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("selection_panel/HBoxContainer/grenade3:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("selection_panel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("selection_panel/HBoxContainer/grenade1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("selection_panel/HBoxContainer/grenade2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("selection_panel/HBoxContainer/grenade3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="player" type="KinematicBody2D" groups=[
"persist",
"player",
]]
collision_mask = 409
script = ExtResource( 9 )

[node name="character" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="reel" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -1.23344, -2.28732 )
frames = SubResource( 2 )

[node name="weapon" parent="." groups=[
"persist",
] instance=ExtResource( 8 )]
position = Vector2( 0.0529556, 3.44389 )
input_pickable = false

[node name="collision" type="CollisionPolygon2D" parent="."]
position = Vector2( 2.6352, -1.9764 )
polygon = PoolVector2Array( 5.62983, -20.5464, 9.21962, -17.7123, 10.5422, 14.5958, 5.15749, 18.9413, -7.0289, 19.1302, -10.3353, 14.5958, -10.0519, -14.1225, -4.6672, -20.3574 )

[node name="hook" type="Area2D" parent="."]
visible = false
position = Vector2( -11.4376, 1.0281 )
rotation = -0.00454913
collision_mask = 144
script = ExtResource( 47 )

[node name="rope_container" type="Node" parent="hook"]

[node name="rope_container2" type="Node" parent="hook"]

[node name="collision" type="CollisionPolygon2D" parent="hook"]
position = Vector2( 16.055, -0.511734 )
polygon = PoolVector2Array( 10.577, 0.00614123, 4.37234, 3.47278, -0.196241, 0.20353, 4.43268, -3.40844 )
disabled = true

[node name="Sprite" type="Sprite" parent="hook"]
position = Vector2( 5.192, 0 )
z_index = 3
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="hook"]
position = Vector2( 20.9744, 0.0717063 )
z_index = 3
texture = ExtResource( 10 )

[node name="selection_panel" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
margin_left = -18.5223
margin_top = -51.8394
margin_right = 22.4777
margin_bottom = -26.8394
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="selection_panel"]
margin_left = 3.0
margin_top = 1.0
margin_right = 40.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grenade1" type="TextureButton" parent="selection_panel/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 9.0
margin_bottom = 19.0
size_flags_horizontal = 3
disabled = true
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 3

[node name="grenade2" type="TextureButton" parent="selection_panel/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 13.0
margin_right = 22.0
margin_bottom = 19.0
size_flags_horizontal = 3
disabled = true
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grenade3" type="TextureButton" parent="selection_panel/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 26.0
margin_right = 37.0
margin_bottom = 19.0
size_flags_horizontal = 3
disabled = true
texture_normal = ExtResource( 15 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nade_panel_timer" type="Timer" parent="selection_panel"]
wait_time = 7.0
one_shot = true

[node name="ooc_indicator" type="TextureProgress" parent="."]
show_behind_parent = true
margin_left = -15.3679
margin_top = 17.0583
margin_right = 384.632
margin_bottom = 137.058
rect_scale = Vector2( 0.09, 0.085 )
step = 0.01
texture_under = ExtResource( 21 )
texture_progress = ExtResource( 24 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="combination_particles" type="Particles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.66
explosiveness = 1.0
process_material = SubResource( 5 )

[node name="combination_timer" type="Timer" parent="combination_particles"]
wait_time = 2.0
one_shot = true

[node name="weapon_label" type="Label" parent="."]
margin_top = -43.0
margin_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dust" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 2.8596, 20.7764 )
emitting = false
amount = 16
lifetime = 1.5
process_material = SubResource( 11 )
texture = ExtResource( 46 )

[node name="grenade_container" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/1sel = SubResource( 12 )
anims/2sel = SubResource( 13 )
anims/3sel = SubResource( 14 )
anims/fade_in = SubResource( 15 )
anims/fade_out = SubResource( 16 )

[node name="scent_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="scent_timeout_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="cc_timer" type="Timer" parent="."]
one_shot = true

[node name="ooc_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ability_1" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ability_2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="reeling_done" from="." to="hook" method="_on_player_reeling_done"]
[connection signal="retract_rope" from="." to="hook" method="_on_player_retract_rope"]
[connection signal="animation_finished" from="character" to="." method="_on_character_animation_finished"]
[connection signal="animation_finished" from="reel" to="." method="_on_reel_animation_finished"]
[connection signal="body_entered" from="hook" to="hook" method="_on_hook_body_entered"]
[connection signal="is_back" from="hook" to="." method="_on_hook_is_back"]
[connection signal="reel_in" from="hook" to="." method="_on_hook_reel_in"]
[connection signal="pressed" from="selection_panel/HBoxContainer/grenade1" to="." method="_on_grenade1_pressed"]
[connection signal="pressed" from="selection_panel/HBoxContainer/grenade2" to="." method="_on_grenade2_pressed"]
[connection signal="pressed" from="selection_panel/HBoxContainer/grenade3" to="." method="_on_grenade3_pressed"]
[connection signal="timeout" from="selection_panel/nade_panel_timer" to="." method="_on_nade_panel_timer_timeout"]
[connection signal="timeout" from="combination_particles/combination_timer" to="." method="_on_combination_timer_timeout"]
[connection signal="timeout" from="scent_timer" to="." method="_on_scent_timer_timeout"]
[connection signal="timeout" from="scent_timeout_timer" to="." method="_on_scent_timeout_timer_timeout"]
[connection signal="timeout" from="cc_timer" to="." method="_on_cc_timer_timeout"]
